# Copyright 2019 Walmart Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "pc-transact"
version = "0.1.0"
authors = ["Walmart Inc."]
edition = "2018"

[dependencies]
transact = { version = "0.3.7" , features = ["sawtooth-compat"] }
cylinder = "0.2"
protobuf = "2"
regex = "1.3.1"
sawtooth-sdk = "0.5"
rust-crypto = "0.2.36"
log = "0.3.0"
log4rs = "0.7.0"
rand = "0.4.2"
hex = "0.3"
sha2 = "0.8"

[build-dependencies]
protoc-rust = "2.0"
glob = "0.2"
